--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -7,6 +7,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 $dark-gray: #7F7F7F;
 $darker-gray: #686868;
 $tangerine: #FCA166;
+$darker-tangerine: #FF7926;
 
 // ----------------- Global -----------------------------------
 
@@ -271,15 +272,16 @@ footer {
   height: 5vh;
   border-radius: 10px;
   border: 4px solid black;
-  background-color: $darker-gray;
+  // background-color: $darker-gray;
+  background-color: $darker-tangerine;
   color: white;
   transition: background 0.3s ease-in-out;
 }
 
 .chat-input-button:hover {
-  // background-color: white;
-  background-color: $tangerine;
-  color: black;
+  background-color: black;
+  // background-color: $tangerine;
+  color: white;
 }
 
 input:focus {
